@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-09T01:59:11Z",
+  "timestamp" : "2022-10-12T08:27:04Z",
   "count_outdated" : 344,
   "uniques_outdated" : 209,
-  "count" : 348,
-  "uniques" : 212,
+  "count" : 352,
+  "uniques" : 215,
   "clones" : [
     {
       "timestamp": "2022-10-03T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-12T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
