@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-10-03T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-12T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
