@@ -1,3 +1,11 @@
+2022-10-12T08:27:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3233164913 # 892
+* notice: last 14d: unq all: 6 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 209 344 / 212 348
+* notice: next accum: outdated-unq outdated-all / unq all: 209 344 / 215 352
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-10-12]
+
 2022-10-09T01:59:11Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3212527843
 * notice: last 14d: unq all: 3 4
